--- a/index.css
+++ b/index.css
@@ -116,3 +116,44 @@ canvas {
 .hidden {
 	display: none;
 }
+
+#levelName {
+	position: absolute;
+	top: 20%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: white;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-size: 9vmin;
+	text-decoration: underline;
+
+	opacity: 0;
+}
+
+#levelName.shown {
+	animation: levelNameAnim 2.5s;
+}
+
+@keyframes levelNameAnim {
+	0% {
+		opacity: 0;
+		font-size: 9vmin;
+	}
+	
+	15% {
+		opacity: 1;
+		font-size: 10vmin;
+	}
+	
+
+	0% {
+		opacity: 1;
+		font-size: 10vmin;
+	}
+
+	100% {
+		opacity: 0;
+		font-size: 15vmin;
+
+	}
+}
